--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
   "author": "Rafat Hossain",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
     "config": "^3.3.7",
     "express": "^4.18.1",
     "express-validator": "^6.14.2",
     "gravatar": "^1.8.2",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.13.14",
+    "mongoose": "^5.5.1",
+    "normalize-url": "^5.3.0",
     "request": "^2.88.2"
   }
 }
